test_regress/t/t_covergroup_trans_repeat_unsup_bad.out
%Warning-COVERIGN: t/t_covergroup_trans_repeat_unsup_bad.v:15:20: Ignoring unsupported: cover '[*'
   15 |       bins t1 = (1 [*2]);
      |                    ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: t/t_covergroup_trans_repeat_unsup_bad.v:15:12: Transition set without items
                                                     : ... note: In instance 't'
   15 |       bins t1 = (1 [*2]);
      |            ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
